# NTNU_Code

./: .gitignore  CppNTNU.code-workspace  ESDA.code-workspace  Python.code-workspace
Arithmetic Operators/: Arithmetic Operators.vcxproj  Arithmetic Operators.vcxproj.filters
Cpp_DTE-2600/: DTE-2600.vcxproj  The Basics.sln
Cpp_DTE-2600/For Loop/: For Loop.cpp  (+2 more)
Cpp_TDT4102/01Oving/subprojects/sdl2_image_windows/: copy.py  meson.build
Cpp_TDT4102/01Oving/subprojects/sdl2_image_windows/lib/: libSDL2_image.la
Cpp_TDT4102/01Oving/subprojects/sdl2_image_windows/lib/cmake/SDL2_image/: sdl2_image-config-version.cmake  sdl2_image-config.cmake
Cpp_TDT4102/01Oving/subprojects/sdl2_image_windows/lib/pkgconfig/: SDL2_image.pc
Cpp_TDT4102/01Oving/subprojects/sdl2_windows/: meson.build
Cpp_TDT4102/01Oving/subprojects/sdl2_windows/lib/: libSDL2.la  libSDL2_test.la  libSDL2main.la
Cpp_TDT4102/01Oving/subprojects/sdl2_windows/lib/cmake/SDL2/: sdl2-config-version.cmake
Cpp_TDT4102/01Oving/subprojects/sdl2_windows/lib/pkgconfig/: sdl2.pc
DTE-2600/: DTE-2600.vcxproj  The Basics.sln
FPGA/: 3AND.ice
For Loop/: For Loop.cpp  For Loop.vcxproj.filters
Functions/: Functions.cpp  Functions.vcxproj
Logical Operators/: Header.h  Logical Operators.cpp
MX_TTM4135/: groupquiz.py
Py_DTE-2510/: .gitignore  RSA_prme.py  Steganography.py  harry.py  tictactoe.py  voldemort.py
Py_Div/: Hoved3actual.py
Py_ITGK/: bitstuff.py  test.py
Py_Matte2/: 03Foruerrekker.py
TTT4260-ESDA/: 02Adderer.ice  test.py
The basics/: The basics.cpp
User defined types/: header.h  main.cpp
While Loop/: While Loop.cpp
(+984 files in other folders)
